@@ -2,6 +2,8 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? ????, PHP 8.1.20
 
+- Opcache:
+  . Fixed bug GH-11134 (Incorrect match default branch optimization). (ilutov)
 
 11 May 2023, PHP 8.1.19
 
